| Bug #35074 | max_used_connections is not correct | ||
|---|---|---|---|
| Submitted: | 5 Mar 12:47 | Modified: | 26 Mar 19:04 |
| Reporter: | Alexander Nozdrin | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Alexander Nozdrin | Target Version: | 5.1+ |
| Triage: | D2 (Serious) | ||
[5 Mar 12:47]
Alexander Nozdrin
[13 Mar 10:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43902 ChangeSet@1.2562, 2008-03-13 12:02:12+03:00, anozdrin@quad. +3 -0 Fix for Bug#35074: max_used_connections is not correct. The problem was that number of threads was used to calculate max_used_connections. The fix is to use number of active connections.
[14 Mar 9:07]
Alexander Nozdrin
Pushed into 5.1-runtime.
[26 Mar 15:13]
Bugs System
Pushed into 5.1.24-rc
[26 Mar 19:04]
Paul DuBois
Noted in 5.1.24 changelog. Non-connection threads were being counted in the value of the Max_used_connections status variable.
[27 Mar 18:50]
Bugs System
Pushed into 6.0.5-alpha
[3 Apr 17:10]
Jon Stephens
Also noted fix in the 5.1.23-ndb-6.3.11 and 6.0.5 changelogs.
