Fix for Bug#35074: max_used_connections is not correct.

The problem was that number of threads was used to calculate
max_used_connections.

The fix is to use number of active connections.